--- a/PDFViewerUWPDemo/PDFViewerUWPDemo/MainPage.xaml
+++ b/PDFViewerUWPDemo/PDFViewerUWPDemo/MainPage.xaml
@@ -2,11 +2,9 @@
     x:Class="PDFViewerUWP_PDFTron.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:PDFViewerUWP_PDFTron.ViewModel"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:PDFTron="using:pdftron.PDF"
-    mc:Ignorable="d"
+    mc:Ignorable="d" Width="800" Height="600"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
@@ -21,37 +19,38 @@
         </Grid.ColumnDefinitions>
 
         <StackPanel Orientation="Horizontal">
-            <StackPanel Grid.Row="0" Orientation="Horizontal" 
-                    HorizontalAlignment="Left" Margin="5">
+            <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left" Margin="5">
 
-                <Button Command="{Binding CMDOpenFile}" Width="60" Height="65" Margin="0 0 4 0">
+                <Button Command="{Binding CMDOpenFile}" Width="60" Height="50" Margin="0 0 4 0">
                     <StackPanel>
-                        <Image Source="/images/fileopen.gif" Margin="0 0 0 4"/>
+                        <SymbolIcon Symbol="OpenFile" Height="20"/>
                         <TextBlock Text="Open" FontSize="10" HorizontalAlignment="Center"/>
-                    </StackPanel>                    
-                </Button>
-
-                <Button Command="{Binding CMDPreviousPage}" Width="60" Height="65" Margin="0 0 4 0">
-                    <StackPanel Height="55" Width="60" Margin="0 0 0 0" HorizontalAlignment="Center">
-                        <Image Source="/images/reverse_green.png" Width="40"/>
-                        <TextBlock Text="Previous" FontSize="10" HorizontalAlignment="Center" />
-                    </StackPanel>                    
-                </Button>
-
-                <Button Command="{Binding CMDNextPage}" Width="60" Height="65" >                    
-                    <StackPanel Width="50" Height="55" HorizontalAlignment="Center" VerticalAlignment="Center">
-                        <Image Source="/images/play_green.png" Width="40" />
-                        <TextBlock Text="Next" FontSize="10" HorizontalAlignment="Center"/>
                     </StackPanel>
                 </Button>
 
+                <Button Command="{Binding CMDPreviousPage}" Width="60" Height="50" Margin="0 0 4 0">
+                    <StackPanel>
+                        <SymbolIcon Symbol="Previous" Height="20"/>
+                        <TextBlock Text="Previous" FontSize="11"/>
+                    </StackPanel>
+                </Button>
+
+                <Button Command="{Binding CMDNextPage}" Width="60" Height="50" >
+                    <StackPanel>
+                        <SymbolIcon Symbol="Next" Height="20"/>
+                        <TextBlock Text="Next" FontSize="11"/>
+                    </StackPanel>
+                </Button>
             </StackPanel>
-
-
         </StackPanel>
 
         <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="Exit" Command="{Binding CMDExitApplication}" Width="50" Height="50" Margin="0 0 4 0"/>
+            <Button Command="{Binding CMDExitApplication}" Width="60" Height="50" Margin="0 0 4 0">
+                <StackPanel>
+                    <SymbolIcon Symbol="Cancel" Height="20"/>
+                    <TextBlock Text="Exit" FontSize="11"/>
+                </StackPanel>
+            </Button>
         </StackPanel>
 
         <Border Grid.Row="1" Grid.ColumnSpan="2" Child="{Binding PDFViewCtrl}"/>
